[project]
name = "sft-demo"
version = "0.1.0"
description = "Qwen SFT with trl + modelscope on H20"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.6.0",
    "transformers",
    "trl>=0.12,<0.14",
    "accelerate",
    "datasets",
    "modelscope[framework]",
    "tensorboard",
    "peft>=0.19.1",
]

# 清华 PyPI 镜像(torch 也走这里,默认就是 CUDA 版)
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
